--- a/package.json
+++ b/package.json
@@ -19,5 +19,18 @@
   },
   "dependencies": {
     "@workadventure/scripting-api-extra": "^1.4.8"
-  }
+  },
+  "workspaces": [
+    "play",
+    "back",
+    "chat",
+    "map-storage",
+    "libs/map-editor",
+    "libs/math-utils",
+    "libs/messages",
+    "libs/tailwind",
+    "benchmark",
+    "uploader",
+    "play/packages/iframe-api-typings"
+  ]
 }
